[package]
authors = ["Anish Sinha", "Xiang Huang"]
name = "lanin-shasha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
serde_bytes = "0.11.7"
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "2.0.0"
bincode = "1.3.3"
positioned-io = { version = "0.3.0" }
derivative = { version = "2.2.0" }
rayon = "1.5.3"
rand = "0.8.5"
lazy_static = "1.4.0"
itertools = "0.10.4"